# agentic-rag-qa

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample_docs/: rag_overview.md  solar_system.md
src/agentic_rag/: __init__.py  api.py  cli.py  config.py  embeddings.py  graph.py  ingestion.py  llm.py  models.py  pipeline.py  service.py  vectorstore.py
tests/: conftest.py  test_api.py  test_graph.py  test_ingestion.py  test_vectorstore.py
